--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,19 @@
 body {
     display: flex;
     flex-direction: column;
+    margin: 0;
 }
 
 .header {
     display: flex;
     justify-content: space-between;
-    background-color: #1F2937;
+    background: #1F2937;
     align-items: center;
+    padding: 10px 50px;
+}
+
+.links {
+    gap: 12px;
 }
 
 .logo {
@@ -22,6 +28,13 @@ body {
     font-size: 18px;
 }
 
+.placeholder {
+    background-color: gray;
+    flex-shrink: 0;
+    width: 400px;
+    height: 200px;
+}
+
 ul {
     list-style-type: none;
     display: flex;
@@ -31,11 +44,22 @@ ul {
 
 .black-center {
     display: flex;
-    background-color: #1F2937;
+    background: #1F2937;
+    align-items: center;
+    padding: 50px;
+    gap: 12px;
 }
 
 .header-black {
     color: #F9FAF8;
     font-size: 48px;
-    font-weight: bolder;    
+    font-weight: bolder;  
+}
+
+.top-button {
+    background-color: #3882F6;
+    color: #E5E7EB;
+    padding: 4px 16px;
+    border-radius: 4px;
+    border: none;
 }
