--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ body {
     display: flex;
     flex-direction: column;
     margin: 0;
+    font-family: sans-serif;
 }
 
 .header {
@@ -9,11 +10,11 @@ body {
     justify-content: space-between;
     background: #1F2937;
     align-items: center;
-    padding: 10px 50px;
+    padding: 30px 150px 10px 50px;
 }
 
 .links {
-    gap: 12px;
+    gap: 24px;
 }
 
 .logo {
@@ -46,7 +47,7 @@ ul {
     display: flex;
     background: #1F2937;
     align-items: center;
-    padding: 50px;
+    padding: 100px 150px 100px 50px;
     gap: 12px;
 }
 
@@ -59,7 +60,63 @@ ul {
 .top-button {
     background-color: #3882F6;
     color: #E5E7EB;
-    padding: 4px 16px;
-    border-radius: 4px;
+    font-weight: bold;
+    font-size: large;
+    padding: 8px 36px;
+    border-radius: 6px;
     border: none;
+    margin-top: 12px;
+}
+
+.black-bold-text {
+    display: flex;
+    justify-content: center;
+    padding: 48px;
+    font-size: 36px;
+    color: #1F2937;
+    font-weight: bolder;
+}
+
+.white-center {
+    display: flex;
+    justify-content: center;
+    gap: 48px;
+}
+
+.image-placeholder {
+    width: 175px;
+    height: 175px;
+    border: 4px solid #3882F6;
+    border-radius: 12px;
+}
+
+.container {
+    display: flex;
+    max-width: 175px;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    margin-bottom: 90px;
+}
+
+.gray-center {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #E5E7EB;
+    padding: 70px;
+}
+
+.inspo {
+    font-size: 36px;
+    color: #1F2937;
+    font-style: italic;
+    font-weight: lighter;
+    max-width: 800px;
+}
+
+.quote {
+    width: 800px;
+    text-align: end;
+    font-weight: bold;
 }
