--- a/styles.css
+++ b/styles.css
@@ -17,14 +17,16 @@ body {
     gap: 24px;
 }
 
-.logo {
+.logo,
+.blue-bold {
     color: #F9FAF8;
     font-size: 24px;
     font-weight: bold;
 }
 
 .placeholder,
-.white-text {
+.white-text,
+.signup {
     color: #E5E7EB;
     font-size: 18px;
 }
@@ -119,4 +121,23 @@ ul {
     width: 800px;
     text-align: end;
     font-weight: bold;
+}
+
+.blue-square {
+    border-radius: 8px;
+    margin: 75px;
+    background-color: #3882F6;
+    display: flex;
+    padding: 50px 100px;
+    justify-content: space-between;
+}
+
+.blue-button {
+    background-color: #3882F6;
+    color: #E5E7EB;
+    border: 2px solid #E5E7EB;
+    border-radius: 6px;
+    padding: 8px 36px;
+    font-weight: bold;
+    font-size: large;
 }
