--- a/styles.css
+++ b/styles.css
@@ -141,3 +141,12 @@ ul {
     font-weight: bold;
     font-size: large;
 }
+
+.footer {
+    display: flex;
+    background-color: #1F2937;
+    color: #E5E7EB;
+    justify-content: center;
+    align-items: center;
+    padding: 30px;
+}
